--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
 <div class="grid-table">
     <div class="thead">
         <div class="tr">
-            <div class="td">Name.</div>
+            <div class="td">Name</div>
             <div class="td">Phone Number</div>
             <div class="td">
                 <button class="btn btn-outline-success" (click)="addContactForm()">
